bin/release/log.txt
main.cpp:24:5: error: non-thread-local declaration of 'int B::b_key' follows thread-local declaration
   24 | int B::b_key = 12;
      |     ^
main.cpp:18:29: note: 'int B::b_key' previously declared here
   18 |     thread_local static int b_key;
      |                             ^~~~~
